fixing topbar z-index glitch

--- a/app/assets/stylesheets/layout/application/_side_bar.scss
+++ b/app/assets/stylesheets/layout/application/_side_bar.scss
@@ -11,7 +11,7 @@ Sidebar
 	position: fixed;
 	left:-200px;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 	
 	@include breakpoint(medium) {
 		left: 0;
