--- a/app/assets/stylesheets/layout/application/_top_bar.scss
+++ b/app/assets/stylesheets/layout/application/_top_bar.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	@include box-shadow(0px,0px,2px,1px,rgba(0,0,0,0.2));
 	background-color: #FFF;
-	z-index: 5;
+	z-index: 1;
 	
 	@include breakpoint(medium) {
 		width: calc(100% - 200px);
